Issue #3116 and #1792: Fix quadratic behavior in marshal.dumps().